2005-02-23  Inge Wallin  <ingwa@dhcp-254-182.lkpg.cendio.se>

	Fix bug 99715
	* kchartSubTypeChartPage.h (KChartBarSubTypeChartPage): Rename
	layer -> stacked and beside -> normal, and change the strings
	accordingly. 

2005-02-22  Inge Wallin  <inge@lysator.liu.se>

	Fix bug 99765:
	* kchartConfigDialog.cc (initSubtypePage): Don't create a
	configuration page for subtype if the type doesn't have a
	subtype.  Applicable to Pie, Ring and Box&Whiskers.

2005-02-19  Inge Wallin  <inge@lysator.liu.se>

	Start of a new page in the config dialog for configuring Data.
	This is not yet finished.
	* kchartDataConfigPage.h: New file
	* kchartDataConfigPage.cc: New file
	* kchartConfigDialog.h (KChartConfigDialog::m_datapage): New member
	* kchartConfigDialog.cc (KChartConfigDialog): Create the data page

2005-01-07  Raphael Langerhorst <raphael-langerhorst@gmx.at>

	Put all KChart classes into the KChart namespace
	* KDChart classes not changed!
	* QtTableView class not changed!

2005-01-06  Raphael Langerhorst <raphael-langerhorst@gmx.at>

	Improve Data Editor usability:
	* sheet.cc: Add tooltips and what's this help.
	* sheet.cc: Use a different color for first row and column
	* sheetdlg.cc: Add tooltips and what's this help.
	* sheetdlg.cc: Change order of widget initialization (better tab order).

2004-11-16  Inge Wallin  <inge@lysator.liu.se>

	Cleanup.
	* kchartDataEditor.{h,cc}: Remove one constructor.
	* table.h (class SheetTable): Reformatting for nicer looking code.

2004-11-05  Inge Wallin  <inge@lysator.liu.se>

	Fix bug 90895: save config is not needed
	* kchart_view.cc (KChartView): Remove actions "loadconfig",
	"saveconfig" and "defaultconfig".
	* kchart.rc: Remove reference to them in the definition of the
	Settings menu.
	
	Fix bug 90904: edit/configure is confusingly named 
	* kchart.rc: Add a sub menu for editing only one aspect of the
	chart.
	* kchart_view.cc: Change shortcut for Edit Data
	* kchart_view.cc: Change string for Configure Chart
